# pygobject_pyoxidizer

./: README.md  pyoxidizer.bzl  pyproject.toml  setup.py
preludian/: __main__.py  helloGTK.glade  main.py
